--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ flask==3.1.1
 flask-cors==6.0.0
 flask-limiter==3.5.0
 joblib==1.5.1
-numpy==2.2.6
+numpy<2.0
 onnxruntime==1.22.0
 librosa==0.11.0
 opencv-python-headless==4.12.0.88
